Revert "Add full solution for exercise 2 - polymorphism chess"

--- a/Chess/CMakeLists.txt
+++ b/Chess/CMakeLists.txt
@@ -1,27 +1,27 @@
-cmake_minimum_required(VERSION 3.15)
+﻿cmake_minimum_required (VERSION 3.15)
 
-project(Chess)
+project (Chess)
 
-# Set C++ version
+# New CMake versions map C++20 to /std:c++20 instead of c++latest, so <format>
+# and other unstable ABI features aren't supported. Use C++23 for such versions
 if (MSVC AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.21)
     set(CMAKE_CXX_STANDARD 23)
-else()
+else ()
     set(CMAKE_CXX_STANDARD 20)
-endif()
+endif ()
 
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set (CMAKE_CXX_STANDARD_REQUIRED ON)
+set (CMAKE_CXX_EXTENSIONS OFF)
 
-# Extra flags for Visual Studio compiler
 if (MSVC)
-    add_compile_options(/W4 /permissive- /Zc:externConstexpr /Zc:inline)
-endif()
+    add_compile_options (/W4 /permissive- /Zc:externConstexpr /Zc:inline)
+endif ()
 
-# Add include directory
-include_directories(include)
+add_executable (Chess "")
 
-# Add all source files from src folder
-file(GLOB SOURCES src/*.cpp)
 
-# Build the executable
-add_executable(Chess ${SOURCES})
+add_subdirectory (include)
+add_subdirectory (src)
+
+
+
