--- a/Chess/CMakeLists.txt
+++ b/Chess/CMakeLists.txt
@@ -1,24 +1,24 @@
-﻿cmake_minimum_required (VERSION 3.15)
+cmake_minimum_required(VERSION 3.15)
 
-project (Chess)
+project(Chess)
 
-# New CMake versions map C++20 to /std:c++20 instead of c++latest, so <format>
-# and other unstable ABI features aren't supported. Use C++23 for such versions
 if (MSVC AND CMAKE_VERSION VERSION_GREATER_EQUAL 3.21)
     set(CMAKE_CXX_STANDARD 23)
-else ()
+else()
     set(CMAKE_CXX_STANDARD 20)
-endif ()
+endif()
 
-set (CMAKE_CXX_STANDARD_REQUIRED ON)
-set (CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 if (MSVC)
-    add_compile_options (/W4 /permissive- /Zc:externConstexpr /Zc:inline)
-endif ()
+    add_compile_options(/W4 /permissive- /Zc:externConstexpr /Zc:inline)
+endif()
 
-add_executable (Chess "")
+include_directories(include)
 
+# אסוף את כל קבצי cpp בתיקיית src
+file(GLOB SOURCES src/*.cpp)
 
-add_subdirectory (include)
-add_subdirectory (src)
+# צור את קובץ ההרצה כולל כל קבצי cpp
+add_executable(Chess ${SOURCES})
